samples/_failures_safe/1761396649_4dc6f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c2c74c3.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_8c2c74c3.c:152:32: error: ‘struct LogStats’ has no member named ‘most_frequent’; did you mean ‘most_frequent_level’?
  152 |         strcpy(analyzer->stats.most_frequent
      |                                ^~~~~~~~~~~~~
      |                                most_frequent_level
./samples/SAFE/__tmp_8c2c74c3.c:152:45: error: expected ‘)’ at end of input
  152 |         strcpy(analyzer->stats.most_frequent
      |               ~                             ^
      |                                             )
./samples/SAFE/__tmp_8c2c74c3.c:152:9: error: too few arguments to function ‘strcpy’
  152 |         strcpy(analyzer->stats.most_frequent
      |         ^~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_8c2c74c3.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:77:1: note: declared here
   77 | __NTH (strcpy (char *__restrict __dest, const char *__restrict __src))
      | ^~~~~
./samples/SAFE/__tmp_8c2c74c3.c:152:9: error: expected declaration or statement at end of input
  152 |         strcpy(analyzer->stats.most_frequent
      |         ^~~~~~
./samples/SAFE/__tmp_8c2c74c3.c:152:9: error: expected declaration or statement at end of input
